// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`index-signature.ts format[typescript]} 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
class LocalStorage implements Storage {
  [index: number]: string;
  [key: string]: any;
}

=====================================output=====================================
class LocalStorage implements Storage {
  [index: number]: string;
  [key: string]: any;
}

================================================================================
`;

exports[`static.ts format[typescript]} 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
class Foo {
  static [value: string]: Type;
}

=====================================output=====================================
class Foo {
  static [value: string]: Type;
}

================================================================================
`;
